# DataScrubb_v2

./: .gitignore  CLAUDE.md  LOGIC.md  README.md  datascrubb_app.py  pyproject.toml  requirements.txt  run_pipeline.py
.streamlit/: config.toml
config/: customer_rates.yaml  default.yaml  sources.yaml  trailer_capacity.yaml
dashboard/: app.py
dashboard/components/: charts.py  data.py  export_button.py  filters.py  help.py  page_filters.py  sidebar.py  topbar.py
dashboard/pages/: admin.py  billing_recon.py  case_variance.py  customer_insights.py  data_load.py  driver_scorecard.py  live_map.py  load_review.py  multi_period.py  observability.py  operations.py  otp_analysis.py  overview.py  rate_matrix.py  reefer_diagnostics.py  route_kpi.py  sap_matching.py  stop_explorer.py  telemetry_view.py  trailer_utilization.py  validation_report.py  warehouse_impact.py
datascrubb/: __init__.py  admin.py  classify.py  config.py  constants.py  db.py  db_cache.py  models.py  pipeline.py  snapshots.py
datascrubb/adapters/: __init__.py  base.py  crst.py  m3pl.py  sap.py  telemetry.py
datascrubb/export/: csv.py  excel.py  pdf.py
datascrubb/kpi/: __init__.py  capacity.py  load_detection.py  revenue.py  route_kpi.py  (+1 more)
docs/: DataScrubb_Docs.html  DataScrubb_Logic.html
scripts/: build_docs_html.py  generate_exec_pdf.py  install_scheduled_task.ps1  migrate_load_signals.py
tests/: conftest.py  test_banded_rates.py  test_capacity.py  test_classify.py  test_db_cache.py  test_kpi.py  test_load_detection.py  test_observability.py  test_pipeline_fallback.py  test_sharepoint_sync.py
(+17 files in other folders)
