[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datascrubb"
version = "1.0.0"
description = "Transportation data integration, validation, and OTP analysis tool"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "sqlalchemy>=2.0",
    "streamlit>=1.30",
    "plotly>=5.18",
    "pyyaml>=6.0",
    "geonamescache>=3.0",
    "reportlab>=4.0",
    "folium>=0.17",
    "streamlit-folium>=0.20",
    "msal>=1.28",
    "requests>=2.31",
]

[tool.setuptools.packages.find]
include = ["datascrubb*", "dashboard*"]
